<resources>
    <string name="app_name">Quick Toggles</string>
    <string name="wifi_on">WiFi On</string>
    <string name="wifi_off">WiFi Off</string>
    <string name="bluetooth_off">Bluetooth Off</string>
    <string name="bluetooth_on">Bluetooth On</string>
    <string name="gps_on">Gps On</string>
    <string name="gps_off">Gps Off</string>
    <string name="airplane_off">Airplane Mode Off</string>
    <string name="airplane_on">Airplane Mode On</string>
    <string name="data_off">Data Off</string>
    <string name="data_on">Data On</string>
    <string name="hotspot_off">Hotspot Off</string>
    <string name="hotspot_on">Hotspot On</string>
    <string name="orientation_on">Orientation On</string>
    <string name="orientation_off">Orientation Off</string>
    <string name="screen_timeout">Screen Timeout</string>
</resources>
